# customer-reviews

./: .gitignore  Dockerfile  README.md  deploy.sh  dev.sh  pyproject.toml  requirements.txt
biquery/dataform/: workflow_settings.yaml
biquery/dataform/definitions/: data_quality_checks.sqlx  reviews_pros_cons.sqlx  reviews_view.sqlx
bk_maps/: __init__.py  bigquery_client.py  config.py  logger.py  places_client.py
colab/: init_places_before_launch_review retrieval.ipynb
mesop_review_visualizer/: .dockerignore  Dockerfile  data_service.py  main.py  requirements.txt
mesop_review_visualizer/static/: style.css
mesop_review_visualizer/tests/: test_data_service.py  test_main_ui_logic.py
review_visualizer/: app.py  requirements.txt
review_visualizer/templates/: index.html
review_visualizer/tests/: test_app.py
scripts/: fetch_reviews.py
